--- a/README.asciidoc
+++ b/README.asciidoc
@@ -1,4 +1,6 @@
 == Basic Info
 This project contains all the source code of exercises for "Practical Unit Testing with JUnit and Mockito" book by Tomek Kaczanowski.
 
+Requires Java 6.
+
 See the book's website: http://practicalunittesting.com
